--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ android:
     - android-23
     - extra-android-m2repository
 
+before_script:
+  - chmod +x gradlew
+
 script:
-   - ./gradlew build connectedCheck
+  - ./gradlew build connectedCheck
