--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,19 @@ android:
     - android-23
     - extra-android-m2repository
 
+    - sys-img-armeabi-v7a-android-21
+env:
+  global:
+    - ADB_INSTALL_TIMEOUT=8
+
 before_script:
   - chmod +x gradlew
   - printf "bintray.user=lodlock\nbintray.apikey=notreal\nbintray.gpg.password=stillnotreal" > ./local.properties
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
+  - android list target
   - ./gradlew build connectedCheck
